fix: 修复 CI 三处失败
- sky-agent: requirements.txt 补充 pytest 等测试依赖
- sky-server: List.of 改为 Arrays.asList 兼容 Java 8
- sky-web: 新增 .npmrc 开启 legacy-peer-deps 解决依赖冲突